style.css
body {
  font-family: Arial, sans-serif;
  background-color: #f2f2f2;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
}



.box {
  background-color: #fff;
  width: 70%;
  margin: 0 auto;
  padding: 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  position: relative;
}

.box:before {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  border: 2px solid #ccc;
  z-index: -1;
}

.box:after {
  content: "";
  position: absolute;
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
  border: 6px solid #ccc;
  z-index: -2;
}


.profile-img {
  width: 150px;
  height: 150px;
  border-radius: 50%;
  object-fit: cover;
  object-position: center;
  position: absolute;
  top: 20px;
  left: -75px;
}

.Introduction{
  margin-top: -35px;
  margin-bottom: -95px;
  margin-left: -4px;
}

.logo {
  width: 100px;
  height: auto;
  margin-bottom: 20px;
}

.icon {
  font-size: 24px;
  margin-right: 5px;
}

h1 {
  font-size: 36px;
  text-align: center;
  margin: 0;
  margin-bottom: 10px;
}

.center {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.experience{
  margin-top: -30px;
  margin-bottom: -30px;
  margin-left: -4px;
}

.job-title {
  display: flex;
  align-items: center;
  margin-top: -5px;
}

.job-title p {
  margin: 0;
  font-size: 18px;
  margin-left: 5px;
}

.company-icon {
  width: 20px;
  height: 20px;
  margin-right: 5px;
}

.social-media a i {
  font-size: 30px;
  padding: 10px;
}


.portfolio_body {
  width: 80%;
  margin: auto;
  display: flex;
  flex-direction: column;
}

.project_collapse {
  background: #fff;
  color: #000;
  font-size: 20px;
  border: none;
  text-align: left;
  cursor: pointer;
  outline: none;
  display: flex;
  align-items: center;
  padding: 10px;
}

.project_collapse:hover {
  background: #f2f2f2;
}

.portfolio_content {
  background: #fff;
  padding: 20px;
  display: none;
  flex-grow: 1;
  font-size: 18px;
  line-height: 1.5;
}

.portfolio_content p {
  margin-bottom: 20px;
}

.portfolio_content ul {
  margin: 0;
  padding-left: 30px;
  list-style: none;
}


.certifications{
  margin-top: -20px;
  margin-bottom: -45px;
  margin-left: -4px;
}


.project_collapse {
  background: #fff;
  color: #000;
  font-size: 20px;
  border: none;
  text-align: left;
  cursor: pointer;
  outline: none;
  display: flex;
  align-items: center;
  padding: 10px;
  margin-left: -80px;
}

.project_collapse i {
  margin-right: 10px;
}

.portfolio_content strong {
  display: block;
  margin-bottom: 5px;
}

.skills{
  margin-bottom: -45px;
  margin-left: 80px;
}
/* This style for programming langauge  skills section */
.languages {
  margin-top: -50px;
  margin-left: -80px;
}

ul.prog {
  margin-left: -180px;
  margin-top: -5px;
}


/* Style for security tools section */
.security-tools {
  margin-left: -150px; 
  margin-top: -50px;
}

ul.sec-tools-values {
  margin-top: -5px;
  margin-left: -250px; 
}


/* Style for other skills  section */

.other-skills {
  margin-left: -120px; 
  margin-top: -50px;

}


ul.other-skills-values{
  margin-top: -5px;
  margin-left: -230px; 
}


.container {
  display: flex;
}

/* Flexbox item styles */
.container > * {
  flex: 1;
}

.resume-pdf{
  margin-top: -20px;
  margin-left: -50px;
}

/*Clsing the gap between Section */
.resume{
  margin-bottom: -30px;
}


ul.Interest_items {
  list-style: disc inside !important;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}





.portfolio_content .programming-languages {
  display: flex;
  flex-direction: column;
}

.portfolio_content li {
  margin-bottom: 10px;
  display: flex;
  align-items: center;
  margin-left: 90px;
}

.portfolio_content li i {
  margin-right: 5px;
}


.certification {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.certification-icon {
  width: 30px;
  height: 30px;
  margin-right: 10px;
  margin-bottom: 20px;
}

.certification-name {
  margin: 0;
  display: flex;
  align-items: center;
}

footer{
  font-size: 12px;
  background-color: white;
  padding: 10px;
  text-align: center;
  color: black;
}


@media (max-width: 768px) {



  .box:before {
    display: none;
  }

  .box:after {
    display: none;
  }

  .box {
    width: 100%;
    height: 100%;
  }

  .profile-img {
    display: none
  }

  .center {
    align-items: flex-start;
  }

  .portfolio_body {
    width: 100%;
  }

  .project_collapse {
    margin-left: 0;
  }

  .portfolio_content li {
    margin-left: 0;
  }

  .container {
    flex-direction: column;
  }

  .languages {
    margin-top: -35px;
    margin-left: 0;
  }

  ul.prog {
    margin-left: 0;
  }

  .security-tools {
    margin-left: 0;
    margin-top: 20px;
  }

  ul.sec-tools-values {
    margin-left: 0;
  }

  .other-skills {
    margin-left: 0;
    margin-top: 20px;
  }

  ul.other-skills-values {
    margin-left: 0;
  }

  .resume-pdf{
    margin-top: -20px;
    margin-left: 12px;
  }
  

}

